fixed issue where buttons where breaking their containers on smaller screens. And updated HTML meta tags.

--- a/src/App.scss
+++ b/src/App.scss
@@ -599,7 +599,7 @@ a{
 @media (min-width:1024px){
   .main-wrapper{
     margin: 0 auto;
-    width: 65%;
+    max-width: 75%;
     // max-width: 1440px;
   }
 }
