--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -75,9 +75,11 @@
   
     .custom-button {
       width: 80%;
+      max-width: 20rem;
       opacity: 0.7;
       position: absolute;
       top: 255px;
+      font-size: 1.3rem;
       display: none;
     }
   
